<resources>
    <string name="app_name">Task2</string>
    <string name="open">Open</string>
    <string name="uri">URI</string>
    <string name="url">URL</string>
    <string name="phone_number">Phone number</string>
    <string name="call">Call</string>
    <string name="coordinates">Coordinates</string>
    <string name="map">Map</string>
    <string name="email">E-mail</string>
    <string name="mail">Mail</string>
</resources>