<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:gravity="center">
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/outlinedTextField"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/uri"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/edit_text"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <Button-->
<!--            android:id="@+id/button"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/open"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/link_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/link_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/open"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/phone_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/call"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/coordinates"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/geo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/geo_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/map"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/email_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/mail"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>